<resources>
    <string name="app_name">AssemblyAndroid</string>
    <string name="input_title">Введите запрос</string>
    <string name="input_label">Введите текст запроса</string>
    <string name="input_button_text">Перейти к фильтрам</string>
    <string name="loading_error_message">Ошибка загрузки проектов</string>
    <string name="input_label2">Название проекта</string>
    <string name="home_title">Домашняя страница</string>

    <string name="filters_title">Фильтры</string>
    <string name="key_words">Ключевые слова</string>
    <string name="key_words_hint">Введите ключевые слова</string>
    <string name="helper_text">hint: business, technology, presentation</string>

    <string name="format_video">Максимальное разрешение видео</string>
    <string name="fps">Кадры в секунду</string>
    <!--    fps = frames per second-->
    <string name="filters_button_text">Поиск</string>

    <string-array name="videoQuality">
        <item>HD</item>
        <item>4K</item>
        <item>ALL</item>
    </string-array>

    <string-array name="frameRates">
        <item>24</item>
        <item>25</item>
        <item>30</item>
        <item>50</item>
        <item>60</item>
    </string-array>

    <string name="result_title">Результаты поиска</string>
    <string name="search_title">Поисковый запрос</string>
    <string name="result_button_text">Отправить на монтаж</string>
    <string name="result_error_text">Во время загрузки произошла ошибка</string>
</resources>