<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/filters_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/filters_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/input_screen_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/key_words_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_screen_back">

        <TextView
            android:id="@+id/key_words_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key_words"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key_words_hint"
            app:helperTextEnabled="true"
            app:helperText="@string/helper_text"
            app:counterEnabled="true"
            app:counterMaxLength="50"

            app:layout_constraintTop_toBottomOf="@+id/home_screen_back">
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

            <!--        Позволяет менять форматирование текста-->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tint"
                tools:text="бизнес"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/format_video_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_words_container">

        <TextView
            android:id="@+id/format_video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/format_video"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:entries="@array/videoQuality" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fps_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/format_video_container">

        <TextView
            android:id="@+id/fps_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fps"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:entries="@array/frameRates" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/filters_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/filters_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/result_error_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/button_filters"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:text="@string/filters_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>